security patch + fixed nginx conf + ipv4 fetch
security patch + fixed nginx conf + ipv4 fetch

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ rtmp {
         listen [::]:1935 ipv6only=on;
         chunk_size 8192;
 
-        application live {
+        application {{STREAM_APP}} {
             live on;
             record off;
         #This setting will be overridden by the template.
